...
                ToolbarItem(placement: .cancellationAction) {
                    Button("Cancel") {
                        dismiss ()
                    }
                }
                ToolbarItem(placement: .confirmationAction) {
                    Button("Done") {
                        dismiss()
                    }
                }
            }
        }
    }
...
