...
            }
        }
        .navigationTitle(book.title)
        .navigationBarTitleDisplayMode(.inline)
        .toolbar {
            ToolbarItem(placement: .topBarTrailing) {
                Button("Edit") {
                showingEditSheet = true
            }
          }
        }
        .sheet(isPresented: $showingEditSheet) {
            EditView(book: $book) 
...
